Refactored AndroidUtils to populate almost all the android build target properties.
Changes:
- Added most of the android build target properties.
- Addressed checkstyle warnings
- Changed GradleSourceSet to store set of resource output directories instead of one directory.
- Removed temporary android testing methods.